fix: prevented ui shifts when scrollbar appears

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
 /* Reset default styles */
 html {
   font-size: 16px;
+  scrollbar-gutter: stable both-edges
 }
 
 body {
